# arcdps-food-reminder

./: Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs
.github/workflows/: build.yml  check.yml  release.yml
data/: definitions.json
data/buffs/: boon.yml  food.yml  util.yml
data/entities/: fractals.yml  raids.yml
src/: action.rs  buff_ui.rs  colors.rs  combo_ui.rs  data.rs  defs.rs  demo.rs  lib.rs  log.rs  plugin.rs  reminder.rs  settings.rs  util.rs  win.rs
src/arc_util/: api.rs  exports.rs  game.rs  mod.rs
src/assets/: mod.rs
src/builds/: build.rs  mod.rs  ui.rs
src/data/: constants.rs  definitions.json  impls.rs  mod.rs  structs.rs
src/demo/: mod.rs  settings.rs  ui.rs
src/plugin/: event.rs  mod.rs  ui.rs
src/remind/: settings.rs
src/reminder/: custom.rs  event.rs  mod.rs  settings.rs  ui.rs
src/tracking/: buff.rs  entry.rs  mod.rs  player.rs  settings.rs  state.rs  ui.rs
src/ui/: align.rs  color.rs  mod.rs  render.rs  window.rs
