[package]
name = "arcdps_food_reminder"
version = "0.5.2"
edition = "2021"
authors = ["Zerthox"]
repository = "https://github.com/zerthox/arcdps-food-reminder"

[dependencies]
arcdps = { version = "0.8", tag = "0.8.0", git = "https://github.com/zerthox/arcdps-bindings", features = ["extras", "log", "serde", "strum"] }
arcdps-imgui = { version = "0.8", features = ["tables-api"] }
arc_util = { version = "0.9", git = "https://github.com/zerthox/arcdps-utils", features = ["serde", "settings"] }
jsonc-parser = { version = "0.20", features = ["serde"] }
log = { version = "0.4", features = ["release_max_level_info"] }
once_cell = "1.9"
open = "3.0"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.39", features = ["System"] }

[build-dependencies]
jsonc-parser = { version = "0.20", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uneval = "0.2"

[lib]
crate-type = ["cdylib"]

[features]
default = []
demo = []

[profile.release]
lto = "thin"

[profile.release-log]
inherits = "release"
debug-assertions = true
incremental = true
