[package]
name = "arcdps_food_reminder"
version = "0.5.3"
edition = "2021"
authors = ["Zerthox"]
repository = "https://github.com/zerthox/arcdps-food-reminder"

[dependencies]
arc_util = { git = "https://github.com/zerthox/arcdps-utils", features = ["serde", "settings"] }
arcdps = { git = "https://github.com/zerthox/arcdps-bindings", features = ["extras", "log", "serde", "strum"] }
arcdps-imgui = { version = "0.8", features = ["tables-api"] }
jsonc-parser = { version = "0.21", features = ["serde"] }
log = { version = "0.4", features = ["release_max_level_info"] }
once_cell = "1.9"
open = "3.0"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.39", features = ["System"] }

[build-dependencies]
jsonc-parser = { version = "0.21", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uneval = "0.2"

[lib]
crate-type = ["cdylib"]

[features]
default = []
demo = []

[profile.release]
lto = "thin"
panic = "abort" # rust currently aborts across ffi boundaries anyway

[profile.release-log]
inherits = "release"
debug-assertions = true
incremental = true
